--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <h1>안녕하세요!</h1>
   <p>여기는 GitHub Pages로 만든 웹사이트입니다.</p>
   
-  <img src="C:\Users\skrnr\OneDrive\바탕 화면\images\image.jpg" alt="인스타 이미지" width="300">
+  <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMDA4MzBfMTQ3%2FMDAxNTk4Nzk1MTQzOTk0.cTR8On6aO0vs4lCaZkk5VXs_455Jgzl7qpTabStRfZ0g.JYr_gxu3wGm74Z3TD2CrUagUv8SbYGoRQq_YDvzscv4g.PNG.kangkim20%2Finsta2.png&type=sc960_832" alt="인스타 이미지" width="300">
 </body>
 </html>
